--- a/app/src/main/res/layout/activity_color_alpha_calculation.xml
+++ b/app/src/main/res/layout/activity_color_alpha_calculation.xml
@@ -6,4 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".ColorAlphaCalculationActivity">
 
+    <LinearLayout
+        android:id="@+id/ll_top_container"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingRight="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <EditText
+            android:id="@+id/et_color_str"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入十六进制颜色值，无效时或默认值为 #000000" />
+
+        <EditText
+            android:id="@+id/et_alpha_percent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="请输入 Alpha 不透明度值" />
+
+        <TextView
+            android:id="@+id/tv_color_result"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="颜色值" />
+
+        <Button
+            android:id="@+id/btn_count"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:text="计算" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_bg_show"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:gravity="center"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_top_container">
+
+        <TextView
+            android:id="@+id/tv_text_show"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="你好，测试文本" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
