--- a/app/src/main/res/layout/activity_color_alpha_calculation.xml
+++ b/app/src/main/res/layout/activity_color_alpha_calculation.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingRight="5dp"
+        android:paddingRight="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -20,13 +20,15 @@
             android:id="@+id/et_color_str"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="请输入十六进制颜色值，无效时或默认值为 #000000" />
+            android:hint="请输入十六进制颜色值，无效时或默认值为 #000000"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/et_alpha_percent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="请输入 Alpha 不透明度值" />
+            android:hint="请输入 Alpha 不透明度值"
+            android:inputType="number" />
 
         <TextView
             android:id="@+id/tv_color_result"
@@ -43,21 +45,23 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_bg_show"
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+    <View
+        android:id="@+id/v_bg_show"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:gravity="center"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_top_container">
+        app:layout_constraintTop_toBottomOf="@+id/ll_top_container" />
 
-        <TextView
-            android:id="@+id/tv_text_show"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="你好，测试文本" />
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_text_show"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="你好，测试文本"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/v_bg_show" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
